objects/ccrz__E_PageSection__c.object
<CustomObject>
    <description>Holds the page sections - entities which comprise a page in the application.</description>
    <fields>
        <fullName>ccrz__DisplayStyle__c</fullName>
        <label>Display Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-Column Grid</fullName>
                </value>
                <value>
                    <fullName>3-Column Grid</fullName>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__DisplayType__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tab</fullName>
                </value>
                <value>
                    <fullName>Widget</fullName>
                </value>
                <value>
                    <fullName>Scroller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Grouping__c</fullName>
        <description>If a tab, all sections with the same group will be in the same tab group.</description>
        <label>Grouping</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Left Column</fullName>
                </value>
                <value>
                    <fullName>Main Content</fullName>
                </value>
                <value>
                    <fullName>Right Column</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__PageName__c</fullName>
        <description>Name of the page to which this section corresponds</description>
        <label>Page Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cart</fullName>
                </value>
                <value>
                    <fullName>CheckoutNew</fullName>
                </value>
                <value>
                    <fullName>HomePage</fullName>
                </value>
                <value>
                    <fullName>MyAccount</fullName>
                </value>
                <value>
                    <fullName>OrderConfirmation</fullName>
                </value>
                <value>
                    <fullName>OrderView</fullName>
                </value>
                <value>
                    <fullName>ProductDetails</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__PageSectionId__c</fullName>
        <externalId>true</externalId>
        <label>PageSectionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SectionFilterOther__c</fullName>
        <label>Section Filter Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SectionFilter__c</fullName>
        <label>Section Filter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>ccrz__SectionName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Assembly Guides</fullName>
                </value>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>CrossSell</fullName>
                </value>
                <value>
                    <fullName>Datasheets</fullName>
                </value>
                <value>
                    <fullName>Flash Files</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Owner&apos;s Manuals</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Safety Documents</fullName>
                </value>
                <value>
                    <fullName>Sales Brochures</fullName>
                </value>
                <value>
                    <fullName>UpSell</fullName>
                </value>
                <value>
                    <fullName>Complementary</fullName>
                </value>
                <value>
                    <fullName>Description</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__SectionName__c</fullName>
        <label>Section Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ccrz__PageName__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Guides</fullName>
                </value>
                <value>
                    <fullName>GuidesSelected</fullName>
                </value>
                <value>
                    <fullName>IncludedItems</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>Reviews</fullName>
                </value>
                <value>
                    <fullName>Sellers</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Specs-All</fullName>
                </value>
                <value>
                    <fullName>Specs-Single</fullName>
                </value>
                <value>
                    <fullName>Tiers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <description>Display order</description>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__Storefront__c</fullName>
        <description>Storefront name. A storefront named &quot;Global&quot; applies to all store fronts. The B2B Commerce first returns records with matched storefront name, and pageName. If no match found, return records with storefront named &quot;Global&quot; and matched pageName.</description>
        <externalId>true</externalId>
        <label>Storefront</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CC Page Section</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__DisplayStyle__c</columns>
        <columns>ccrz__DisplayType__c</columns>
        <columns>ccrz__Grouping__c</columns>
        <columns>ccrz__Location__c</columns>
        <columns>ccrz__SectionName__c</columns>
        <columns>ccrz__SectionFilter__c</columns>
        <columns>ccrz__SectionFilterOther__c</columns>
        <columns>ccrz__PageName__c</columns>
        <columns>ccrz__PageSectionId__c</columns>
        <columns>ccrz__Storefront__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>CC Page Section Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Page Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>